formulario login e senha

--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Já Bebeu Água Hoje?</title>
+    <title>Login e Cadastro</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        #cadastro-form {
+            display: none;
+        }
+        .form-container {
+            max-width: 300px;
+            margin: 0 auto;
+            text-align: center;
+            justify-content: center;
+        }
+    </style>
 </head>
-<style>
-    .conteudo {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        border: solid;
-        margin-top: 5%;
-    }
-    .resultados {
-        border: solid;
-    }
-</style>
 <body>
-    <div class="conteudo">
-        <p>Quantos Copos de 200ml você já bebeu?</p>
-        <form>
-            <input type="number" id="numero" min="1">
+    <div class="form-container">
+        <form id="login-form">
+            <h2>Login</h2>
+            <input type="text" id="login-nome" placeholder="Nome" required>
+            <input type="password" id="login-senha" placeholder="Senha" required>
+            <button id="login-button">Login</button>
+            <p>Ainda não tem uma conta? <a id="cadastro-link" href="#">Cadastro</a></p>
         </form>
-        <br>
-        <button>Registrar</button>
+        <form id="cadastro-form">
+            <h2>Cadastro</h2>
+            <input type="text" id="cadastro-nome" placeholder="Nome" required>
+            <input type="password" id="cadastro-senha" placeholder="Senha" required>
+            <button id="cadastro-button">Cadastrar</button>
+            <p>Já tem uma conta? <a id="login-link" href="#">Login</a></p>
+        </form>
     </div>
-    <div class="resultados">
 
-    </div>
+    <script>
+        document.getElementById('cadastro-link').addEventListener('click', function() {
+            document.getElementById('login-form').style.display = 'none';
+            document.getElementById('cadastro-form').style.display = 'block';
+        });
+
+        document.getElementById('login-link').addEventListener('click', function() {
+            document.getElementById('login-form').style.display = 'block';
+            document.getElementById('cadastro-form').style.display = 'none';
+        });
+    
+    </script>
 </body>
 </html>
